src/components/bs5/searchInput/searchInput.scss
@use "../../../css/mixins";
@import "variables";

// ----------------------------------------------------------------------------------------------------------------------
.qld-search-input {
  @extend %search-input-variables;
  $border-radius: 0.25rem;
  //
  display: flex;
  position: relative;
  border-radius: $border-radius;

  @include mixins.focusable($customSelector: ":has(.form-control:focus)");

  &.full-width {
    max-width: 100%;
  }

  //Icon color is scoped against the parent container, not the input :(
  &:has(.form-control:hover) {
    --qld-icon-color: var(--qld-dark-grey-muted);
  }

  &:has(.form-control:focus) {
    --qld-icon-color: var(--qld-text-grey);

    > button {
      border-bottom-right-radius: $border-radius;
    }
  }

  .form-control {
    min-height: 52px;
    padding: 0.75rem 4rem 0.75rem 1rem;
    border: {
      color: var(--border-color);
      style: solid;
      top-width: 0;
      right-width: 0;
      bottom-width: 0.125rem;
      left-width: 0;
      radius: $border-radius 0 0 0;
    }
    background: var(--background-color);
    padding-right: 7.5rem;
    color: var(--text-color);
    transition: {
      property: border-color, background-color, color;
      timing-function: ease-out;
      duration: 0.2s;
    }

    &::placeholder {
      color: var(--placeholder-color);
    }

    &:hover {
      --qld-icon-color: var(--qld-dark-grey-muted);
      --text-color: var(--qld-text-grey);
      // --placeholder-color: var(--text-color);
      --border-color: var(--border-color-hover);
      --background-color: var(--background-color-hover);
    }

    &:active,
    &:focus {
      --qld-icon-color: var(--qld-text-grey);
      --text-color: var(--qld-text-grey);
      // --placeholder-color: var(--qld-text-grey);
      --border-color: var(--border-color-focus);
      --background-color: var(--background-color-focus);
      outline: none;
      border-bottom-left-radius: $border-radius;
    }
  }

  > button {
    // position: absolute;
    // top: 0;
    // bottom: 0;
    // right: 0;
    border-radius: 0 $border-radius 0 0;
    padding: 0;
    margin: 0;
    width: 3rem;
    box-shadow: none;
    min-width: auto;
    flex-shrink: 0;

    &:hover,
    &:focus {
      box-shadow: none;
    }

    .btn-label {
      display: none;
    }

    //prep a button "search-icon" which is invoked at smaller screeen sizes below
    .btn-icon {
      display: block;
      width: 1.5rem;
      height: 1.5rem;
      height: 1.5rem;
      margin-left: 0.65rem;
      margin-right: 0;
      background-color: var(--icon-color-on-btn);
      mask: var(--icon) center center / 1.25rem no-repeat;
    }
  }

  @include media-breakpoint-up(md) {
    > button {
      padding: calc(0.75rem - 0.125rem) var(--qld-btn-padding-x);
      margin: 0;
      width: auto;

      .btn-label {
        display: block;
      }

      .btn-icon {
        display: none;
        margin-left: 0;
      }
    }

    .form-control {
      padding: 0.75rem 1rem 0.75rem 2.5rem;
    }

    @include mixins.make-icon($name: "search", $size: "xs", $pseudo: "before") {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      left: calc(1rem - 0.125rem);
    }
  }

  @include media-breakpoint-up(lg) {
    min-width: 22.5rem;
  }

  @include media-breakpoint-up(xl) {
    min-width: 26rem;
  }

  //Search dropdown
  .suggestions {
    position: absolute;
    left: 0;
    top: 100%;
    width: 100%;
    z-index: 1;
    border-radius: 0.5rem;
    background: var(--suggestions-bg);
    box-shadow: var(--suggestions-shadow);
    border-bottom: solid 0.25rem var(--suggestions-hover-border-color);

    .suggestions-category {
      &-view-more {
        text-decoration: underline;
        text-decoration-thickness: 0.5px;
        text-decoration-color: rgba(
          $color-default-color-light-text-default,
          0.5
        );
        &:hover {
          background-color: var(--suggestions-hover);
          text-decoration-color: rgba(
            $color-default-color-light-text-default,
            1
          );
          text-decoration-thickness: var(
            --#{$prefix}link-underline-thickness-hover
          );
        }
      }

      &-label {
        padding: 0 1rem;
      }

      ul {
        li {
          a {
            padding: 0.75rem 1rem;
            display: inline-block;
            width: 100%;
          }
        }
      }
    }

    hr {
      margin: 0;
    }

    // Featured search result styles
    .feature {
      background-color: var(--suggestions-feature-bg);

      strong {
        color: var(--suggestions-feature-text-color);
      }

      ul {
        li {
          &:hover {
            background-color: var(--suggestions-feature-hover);
          }

          a {
            color: var(--suggestions-feature-text-color);
          }
        }
      }
    }

    // Show when active
    &.show {
      display: block;
    }

    &__group {
      padding: 0;

      a,
      strong {
        font-size: 1rem;
        text-decoration: none;
      }

      strong {
        font-weight: 600;
        color: var(--#{$prefix}color-default-color-light-text-heading);
      }

      ul {
        padding: 0;
        margin: 0;
        li {
          min-height: 3rem;
          list-style: none;
          cursor: pointer;
          margin-top: 0;

          a {
            vertical-align: middle;
            vertical-align: -webkit-baseline-middle;

            &:hover {
              text-decoration: underline;
            }
          }

          &:hover {
            background-color: var(--suggestions-hover);

            a {
              text-decoration: underline;
              text-decoration-thickness: var(
                --#{$prefix}link-underline-thickness-hover
              );
            }
          }
        }
      }
    }
  }

  //is-filled is default

  &.is-outline {
    --border-color-focus: var(--#{$prefix}light-border-alt);

    .form-control {
      border: {
        top-width: 0.125rem;
        right-width: 0;
        bottom-width: 0.125rem;
        left-width: 0.125rem;
        radius: $border-radius 0 0 $border-radius;
      }
    }

    > button {
      border-radius: 0 $border-radius $border-radius 0;
    }
  }

  .dark &,
  .dark-alt & {
    //Icon color is scoped against the parent container, not the input :(
    &:has(.form-control:hover) {
      --icon-color: var(--qld-white);
    }

    &:has(.form-control:focus) {
      --icon-color: var(--qld-text-grey);
      --text-color: var(--qld-text-grey);
    }

    .form-control {
      &:hover {
        //Dark - Hover state
        --text-color: var(--qld-white);
        --placeholder-color: var(--qld-white);
        --background-color: var(--qld-dark-background-shade);
        --border-color: var(--qld-dark-action-primary-hover);
      }

      &:focus {
        //Dark - Focus state
        --text-color: var(--qld-text-grey);
        --placeholder-color: var(--qld-text-grey);
        --border-color: var(--qld-light-grey);
        --background-color: var(--qld-white);
      }
    }
  }
}

